--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -25,7 +25,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#" th:href="@{/}">Proiect DAW Macari Cristian</a>
+				<a class="navbar-brand" href="#" th:href="@{/}">Proiect DAW Vlas Dumitru</a>
 			</div>
 		</div>
 	</nav>
