--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#" th:href="@{/index}">Proiect DAW Macari Cristian</a>
+				<a class="navbar-brand" href="#" th:href="@{/index}">Proiect DAW Vlas Dumitru</a>
 			</div>
 		</div>
 	</nav>
